fix(frontend): remove field spacing after visually hidden elements

--- a/packages/frontend/components/field/styles.css
+++ b/packages/frontend/components/field/styles.css
@@ -7,7 +7,7 @@
     display: none;
   }
 
-  & > * + * {
+  & > *:not(.-\!-visually-hidden) + * {
     margin-block-start: var(--space-xs);
   }
 }
